# api/swagger/api/swagger.yaml
@@ -118,7 +118,7 @@ definitions:
     - name
     - password
     type: object
-  errorhandling.ErrorResponse:
+  errorhandling.ResponseError:
     properties:
       code:
         description: HTTP статус-код
@@ -155,7 +155,7 @@ paths:
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение всех категорий
       tags:
       - categories
@@ -176,15 +176,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "401":
           description: Не авторизован
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Создание категории
       tags:
       - categories
@@ -205,19 +205,19 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "401":
           description: Не авторизован
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Категория не найдена
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Удаление категории
       tags:
       - categories
@@ -237,15 +237,15 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Категория не найдена
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение категории по ID
       tags:
       - categories
@@ -266,15 +266,15 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Продукт не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Удаление продукта
       tags:
       - products
@@ -294,15 +294,15 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Продукт не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение продукта по ID
       tags:
       - products
@@ -325,11 +325,11 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение продуктов по фильтрам
       tags:
       - products
@@ -351,15 +351,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "401":
           description: Не авторизован
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Создание магазина
       tags:
       - stores
@@ -380,15 +380,15 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Магазин не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Удаление магазина
       tags:
       - stores
@@ -408,11 +408,11 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Магазин не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение магазина по ID
       tags:
       - stores
@@ -438,15 +438,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Магазин не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Обновление магазина
       tags:
       - stores
@@ -469,11 +469,11 @@ paths:
         "400":
           description: Неверный ID магазина
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение категорий магазина
       tags:
       - categories
@@ -500,11 +500,11 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Привязка категории к магазину
       tags:
       - stores
@@ -530,11 +530,11 @@ paths:
         "400":
           description: Неверные ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Отвязка категории от магазина
       tags:
       - stores
@@ -561,11 +561,11 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Создание продукта
       tags:
       - products
@@ -597,15 +597,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Продукт не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Обновление продукта
       tags:
       - products
@@ -628,11 +628,11 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение магазинов по фильтрам
       tags:
       - stores
@@ -653,15 +653,15 @@ paths:
         "400":
           description: Неверный ID
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "404":
           description: Пользователь не найден
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Получение пользователя по ID
       tags:
       - users
@@ -684,15 +684,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "401":
           description: Неверные учетные данные
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Вход пользователя
       tags:
       - users
@@ -714,7 +714,7 @@ paths:
         "400":
           description: Ошибка при выходе
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Выход из системы
       tags:
       - users
@@ -737,7 +737,7 @@ paths:
         "400":
           description: Неверный refresh token
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Обновление сессии
       tags:
       - users
@@ -760,11 +760,11 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/errorhandling.ErrorResponse'
+            $ref: '#/definitions/errorhandling.ResponseError'
       summary: Регистрация пользователя
       tags:
       - users
