# delivery/handlers/user_handler.go
@@ -31,9 +31,9 @@ func NewUserHandler(userUseCase *userUsecase.UserUseCase, validate *validator.Va
 // @Produces application/json
 // @Param user body entities.User true "Данные пользователя"
 // @Success 201 {object} map[string]interface{} "Пользователь успешно зарегистрирован"
-// @Failure 400 {object} errorhandling.ErrorResponse "Ошибка валидации"
-// @Failure 500 {object} errorhandling.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/register [post]
+// @Failure 400 {object} errorhandling.ResponseError "Ошибка валидации"
+// @Failure 500 {object} errorhandling.ResponseError "Внутренняя ошибка сервера"
+// @Router /users/register [post].
 func (h *UserHandler) Register(c echo.Context) error {
 	var user entities.User
 
@@ -62,10 +62,10 @@ func (h *UserHandler) Register(c echo.Context) error {
 // @Produces application/json
 // @Param credentials body entities.LoginCredentials true "Данные для входа"
 // @Success 200 {object} map[string]interface{} "Успешный вход"
-// @Failure 400 {object} errorhandling.ErrorResponse "Ошибка валидации"
-// @Failure 401 {object} errorhandling.ErrorResponse "Неверные учетные данные"
-// @Failure 500 {object} errorhandling.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/login [post]
+// @Failure 400 {object} errorhandling.ResponseError "Ошибка валидации"
+// @Failure 401 {object} errorhandling.ResponseError "Неверные учетные данные"
+// @Failure 500 {object} errorhandling.ResponseError "Внутренняя ошибка сервера"
+// @Router /users/login [post].
 func (h *UserHandler) Login(c echo.Context) error {
 	var credentials entities.LoginCredentials
 	if err := c.Bind(&credentials); err != nil {
@@ -92,10 +92,10 @@ func (h *UserHandler) Login(c echo.Context) error {
 // @Produces application/json
 // @Param id path int true "ID пользователя"
 // @Success 200 {object} entities.User "Информация о пользователе"
-// @Failure 400 {object} errorhandling.ErrorResponse "Неверный ID"
-// @Failure 404 {object} errorhandling.ErrorResponse "Пользователь не найден"
-// @Failure 500 {object} errorhandling.ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/{id} [get]
+// @Failure 400 {object} errorhandling.ResponseError "Неверный ID"
+// @Failure 404 {object} errorhandling.ResponseError "Пользователь не найден"
+// @Failure 500 {object} errorhandling.ResponseError "Внутренняя ошибка сервера"
+// @Router /users/{id} [get].
 func (h *UserHandler) GetUserByID(c echo.Context) error {
 	id := c.Param("id")
 	uint64ID, err := strconv.ParseUint(id, 10, 64)
@@ -118,8 +118,8 @@ func (h *UserHandler) GetUserByID(c echo.Context) error {
 // @Produces application/json
 // @Param request body object true "Refresh token" {"refresh_token": "string"}
 // @Success 200 {object} map[string]interface{} "Токены обновлены"
-// @Failure 400 {object} errorhandling.ErrorResponse "Неверный refresh token"
-// @Router /users/refresh [post]
+// @Failure 400 {object} errorhandling.ResponseError "Неверный refresh token"
+// @Router /users/refresh [post].
 func (h *UserHandler) RefreshSession(c echo.Context) error {
 	var request struct {
 		Token string `json:"refresh_token" validate:"required"`
@@ -144,8 +144,8 @@ func (h *UserHandler) RefreshSession(c echo.Context) error {
 // @Produces application/json
 // @Param request body object true "Access token" {"access_token": "string"}
 // @Success 200 {string} string "Успешный выход"
-// @Failure 400 {object} errorhandling.ErrorResponse "Ошибка при выходе"
-// @Router /users/logout [post]
+// @Failure 400 {object} errorhandling.ResponseError "Ошибка при выходе"
+// @Router /users/logout [post].
 func (h *UserHandler) Logout(c echo.Context) error {
 	var request struct {
 		Token string `json:"access_token" validate:"required"`
