# pkg/error_handling/error_response.go
@@ -1,15 +1,15 @@
 package errorhandling
 
-// ErrorResponse - структура для представления ошибок и отправки их в ответе.
-type ErrorResponse struct {
+// ResponseError - структура для представления ошибок и отправки их в ответе.
+type ResponseError struct {
 	Code    int    `json:"code"`    // HTTP статус-код
 	Details string `json:"details"` // Сообщение для пользователя
 	Err     error  `json:"-"`       // Внутренняя ошибка, не отправляется клиенту
 }
 
-// NewErrorResponse - конструктор для создания ошибок.
-func NewErrorResponse(code int, details string, err error) *ErrorResponse {
-	return &ErrorResponse{
+// NewResponseError - конструктор для создания ошибок.
+func NewResponseError(code int, details string, err error) *ResponseError {
+	return &ResponseError{
 		Code:    code,
 		Details: details,
 		Err:     err,
@@ -17,7 +17,7 @@ func NewErrorResponse(code int, details string, err error) *ErrorResponse {
 }
 
 // Error - метод, который возвращает строку ошибки.
-func (e *ErrorResponse) Error() string {
+func (e *ResponseError) Error() string {
 	if e.Err != nil {
 		return e.Err.Error()
 	}
